--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 main:
   - title: "Blog"
     url: /posts
-  - title: "Kinderstimmen"
-    url: /kinderstimmen
+  - title: "Stimmen unserer Fans"
+    url: /stimmen
